--- a/index.html
+++ b/index.html
@@ -234,15 +234,14 @@
                   <span>Finacne</span>
                   <h2>Heading Will Be Here</h2>
                   <ul>
-                     <li>
+                    <li>
                       <i class="icofont-calendar" aria-hidden="true"></i> Sep
                       19, 2020
                     </li>
+                    <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
                     <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                      Ramores Raserva
                     </li>
                   </ul>
                   <div class="news-over">
@@ -268,15 +267,14 @@
                   <span>Finacne</span>
                   <h2>Heading Will Be Here</h2>
                   <ul>
-                     <li>
+                    <li>
                       <i class="icofont-calendar" aria-hidden="true"></i> Sep
                       19, 2020
                     </li>
+                    <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
                     <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                      Ramores Raserva
                     </li>
                   </ul>
                   <div class="news-over">
@@ -303,15 +301,14 @@
                   <span>Finacne</span>
                   <h2>Heading Will Be Here</h2>
                   <ul>
-                     <li>
+                    <li>
                       <i class="icofont-calendar" aria-hidden="true"></i> Sep
                       19, 2020
                     </li>
+                    <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
                     <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                      Ramores Raserva
                     </li>
                   </ul>
                   <div class="news-over">
@@ -337,15 +334,14 @@
                   <span>Finacne</span>
                   <h2>Heading Will Be Here</h2>
                   <ul>
-                     <li>
+                    <li>
                       <i class="icofont-calendar" aria-hidden="true"></i> Sep
                       19, 2020
                     </li>
+                    <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
                     <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                      Ramores Raserva
                     </li>
                   </ul>
                   <div class="news-over">
@@ -371,15 +367,14 @@
                   <span>Finacne</span>
                   <h2>Heading Will Be Here</h2>
                   <ul>
-                     <li>
+                    <li>
                       <i class="icofont-calendar" aria-hidden="true"></i> Sep
                       19, 2020
                     </li>
+                    <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
                     <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                      Ramores Raserva
                     </li>
                   </ul>
                   <div class="news-over">
@@ -405,15 +400,14 @@
                   <span>Finacne</span>
                   <h2>Heading Will Be Here</h2>
                   <ul>
-                     <li>
+                    <li>
                       <i class="icofont-calendar" aria-hidden="true"></i> Sep
                       19, 2020
                     </li>
+                    <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
                     <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                      Ramores Raserva
                     </li>
                   </ul>
                   <div class="news-over">
