--- a/detail-berita.html
+++ b/detail-berita.html
@@ -116,7 +116,7 @@
                   <button
                     onClick="window.open('http://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.developphp.com%2Fvideo%2FJavaScript%2FTrigger-CSS-Transitions-to-Control-Animations','sharer','toolbar=0,status=0,width=580,height=400');"
                     title="Share on Facebook"
-                    class="fb-button btn btn-primary"
+                    class="fb-button btn"
                   >
                     <i class="icofont-facebook"></i>
                     Share on Facebook
@@ -126,7 +126,7 @@
                   <button
                     onClick="window.open('http://www.twitter.com/intent/tweet?url=https%3A%2F%2Fwww.developphp.com%2Fvideo%2FJavaScript%2FTrigger-CSS-Transitions-to-Control-Animations&amp;text=JavaScript - Trigger CSS Transitions to Control Animations','tweety','toolbar=0,status=0,width=550,height=450');"
                     title="Tweet this"
-                    class="tw-button btn btn-primary"
+                    class="tw-button btn"
                   >
                     <i class="icofont-twitter"></i>
                     <span class="down-mobile">Tweet on Twitter</span>
@@ -136,7 +136,7 @@
                   <button
                     onClick="window.location='mailto:?subject=JavaScript - Trigger CSS Transitions to Control Animations&body=Hi, I thought you might like to see this: %0D%0Ahttps://www.developphp.com/video/JavaScript/Trigger-CSS-Transitions-to-Control-Animations';"
                     title="Send this to an email contact"
-                    class="gp-button btn btn-primary"
+                    class="gp-button btn"
                   >
                     <i class="icofont-email"></i> Gmail
                   </button>
@@ -144,6 +144,304 @@
               </ul>
             </div>
             <!-- end post-sharing -->
+            <div class="single-post-media pt-5">
+              <img src="frontend/images/image3.jpg" alt="" class="img-fluid" />
+            </div>
+            <!-- end media -->
+            <div class="blog-content">
+              <div class="pp">
+                <p>
+                  In lobortis pharetra mattis. Morbi nec nibh iaculis,
+                  <a href="#">bibendum augue a</a>, ultrices nulla. Nunc velit
+                  ante, lacinia id tincidunt eget, faucibus nec nisl. In mauris
+                  purus, bibendum et gravida dignissim, venenatis commodo lacus.
+                  Duis consectetur quis nisi nec accumsan. Pellentesque enim
+                  velit, ut tempor turpis. Mauris felis neque, egestas in
+                  lobortis et,iaculis at nunc ac, rhoncus sagittis ipsum.
+                </p>
+
+                <h3>
+                  <strong
+                    >Maecenas non convallis quam, eu sodales justo. Pellentesque
+                    quis lectus elit. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit.</strong
+                  >
+                </h3>
+
+                <p>
+                  Donec nec metus sed leo sollicitudin ornare sed consequat
+                  neque. Aliquam iaculis neque quis dui venenatis, eget posuere
+                  felis viverra. Ut sit amet feugiat elit, nec elementum velit.
+                  Sed eu nisl convallis, efficitur turpis eu, euismod nunc.
+                  Proin neque enim, malesuada non lobortis nec, facilisis et
+                  lectus. Ie consectetur. Nam eget neque ac ex fringilla
+                  dignissim eu ac est. Nunc et nisl vel odio posuere.
+                </p>
+
+                <p>
+                  Vivamus non condimentum orci. Pellentesque venenatis nibh sit
+                  amet est vehicula lobortis. Cras eget aliquet eros. Nunc
+                  lectus elit, suscipit at nunc sed, finibus imperdiet ipsum.
+                  Maecenas dapibus neque sodales nulla finibus volutpat. Integer
+                  pulvinar massa vitae ultrices posuere. Proin ut tempor turpis.
+                  Mauris felis neque, egestas in lobortis et, sodales non ante.
+                  Ut vestibulum libero quis luctus tempus. Nullam eget dignissim
+                  massa. Vivamus id condimentum orci. Nunc ac sem urna. Aliquam
+                  et hendrerit nisl massa nunc.
+                </p>
+              </div>
+              <!-- end pp -->
+
+              <img
+                src="frontend/images/image5.jpg"
+                alt=""
+                class="img-fluid img-fullwidth"
+              />
+
+              <div class="pp">
+                <h3>
+                  <strong
+                    >Nam non velit est. Sed lobortis arcu vitae nunc molestie
+                    consectetur. Nam eget neque ac ex fringilla dignissim eu ac
+                    est. Nunc et nisl vel odio posuere.
+                  </strong>
+                </h3>
+
+                <p>
+                  Vivamus non condimentum orci. Pellentesque venenatis nibh sit
+                  amet est vehicula lobortis. Cras eget aliquet eros. Nunc
+                  lectus elit, suscipit at nunc sed, finibus imperdiet ipsum.
+                  Maecenas dapibus neque sodales nulla finibus volutpat. Integer
+                  pulvinar massa vitae ultrices posuere. Proin ut tempor turpis.
+                  Mauris felis neque, egestas in lobortis et, sodales non ante.
+                  Ut vestibulum libero quis luctus tempus. Nullam eget dignissim
+                  massa. Vivamus id condimentum orci. Nunc ac sem urna. Aliquam
+                  et hendrerit nisl massa nunc.
+                </p>
+
+                <p>
+                  Morbi pharetra porta consequat. Aenean et diam sapien.
+                  <a href="#">Interdum et malesuada</a> fames ac ante ipsum
+                  primis in faucibus. Pellentesque dictum ligula iaculis,
+                  feugiat metus eu, sollicitudin ex. Quisque eu ullamcorper
+                  ligula. In vel ex ac purus finibus viverra. Maecenas pretium
+                  lobortis turpis. Fusce lacinia nisi in tortor massa nunc.
+                </p>
+
+                <ul class="check">
+                  <li>Integer sit amet odio ac lectus imperdiet elementum.</li>
+                  <li>Praesent vitae lacus sed lacus ullamcorper mollis.</li>
+                  <li>
+                    Donec vitae metus ac felis vulputate tincidunt non et ex.
+                  </li>
+                  <li>In dapibus sapien at viverra venenatis.</li>
+                  <li>Pellentesque mollis velit id maximus finibus.</li>
+                </ul>
+
+                <p>
+                  Proin ultricies nulla consectetur, sollicitudin dolor at,
+                  sollicitudin mauris. Maecenas at nunc nunc. Ut nulla felis,
+                  tincidunt et porttitor at, rutrum in dolor. Aenean id
+                  tincidunt ligula. Donec vitae placerat odio. Mauris accumsan
+                  nibh ut nunc maximus, ac auctor elit vehicula. Cras leo sem,
+                  vehicula a ultricies ac, condimentum vitae lectus. Sed ut eros
+                  euismod, luctus nisl eu, congue odio.
+                </p>
+
+                <p>
+                  <img
+                    src="frontend/images/image2.jpg"
+                    class="float-left"
+                    width="380"
+                    alt=""
+                  />Suspendisse ultrices placerat dolor sed efficitur. Morbi in
+                  laoreet diam. Pellentesque habitant morbi tristique senectus
+                  et netus et malesuada fames ac turpis egestas. Mauris ut massa
+                  id lectus laoreet porta non in metus. Donec nibh justo,
+                  tincidunt non justo ut, tincidunt malesuada turpis. Cras
+                  pellentesque sollicitudin ex eget pharetra.rta non in metus.
+                  Donec nibh justo, tincidunt non justo ut, tincidunt malesuada
+                  turpis. Cras pellentesque sollicitudin ex eget pharetra.
+                </p>
+
+                <h3>
+                  <strong
+                    >Nam non velit est. Sed lobortis arcu vitae nunc molestie
+                    consectetur. Nam eget neque ac ex fringilla dignissim eu ac
+                    est. Nunc et nisl vel odio posuere.
+                  </strong>
+                </h3>
+
+                <p>
+                  Aliquam eget maximus odio. Aliquam varius nisl ut leo
+                  fermentum, id fringilla magna tempus. Curabitur quis bibendum
+                  lorem, ut suscipit tellus. Morbi id dictum justo, et massa
+                  nunc. Mauris laoreet, neque et varius malesuada, justo neque
+                  consequat dolor, sit amet semper dui ligula commodo enim. Duis
+                  mauris magna, euismod in ante sed, laoreet faucibus elit. Nam
+                  euismod vulputate lorem, nec tincidunt lacus volutpat sit
+                  amet. In libero eros, dignissim vitae quam sed, maximus
+                  consectetur justo. Donec id orci eget odio convallis
+                  pellentesque. Quisque urna cras amet.Vivamus non condimentum
+                  orci. Pellentesque venenatis nibh sit amet est vehicula
+                  lobortis. Cras eget aliquet eros. Nunc lectus elit, suscipit
+                  at nunc sed, finibus imperdiet ipsum. Maecenas dapibus neque
+                  sodales nulla finibus volutpat. Integer pulvinar massa vitae
+                  ultrices posuere. Proin ut tempor turpis. Mauris felis neque,
+                  egestas in lobortis et, sodales non ante. Ut vestibulum libero
+                  quis luctus tempus. Nullam eget dignissim massa. Vivamus id
+                  condimentum orci. Nunc ac sem urna. Aliquam et hendrerit nisl
+                  massa nunc.
+                </p>
+
+                <p>
+                  <img
+                    src="frontend/images/image4.jpg"
+                    class="float-right"
+                    width="380"
+                    alt=""
+                  />Suspendisse ultrices placerat dolor sed efficitur. Morbi in
+                  laoreet diam. Pellentesque habitant morbi tristique senectus
+                  et netus et malesuada fames ac turpis egestas. Mauris ut massa
+                  id lectus laoreet porta non in metus. Donec nibh justo,
+                  tincidunt non justo ut, tincidunt malesuada turpis. Cras
+                  pellentesque sollicitudin ex eget pharetra.rta non in metus.
+                  Donec nibh justo, tincidunt non justo ut, tincidunt malesuada
+                  turpis. Cras pellentesque sollicitudin ex eget pharetra.
+                </p>
+
+                <p>
+                  Vivamus non condimentum orci. Pellentesque venenatis nibh sit
+                  amet est vehicula lobortis. Cras eget aliquet eros. Nunc
+                  lectus elit, suscipit at nunc sed, finibus imperdiet ipsum.
+                  Maecenas dapibus neque sodales nulla finibus volutpat. Integer
+                  pulvinar massa vitae ultrices posuere. Proin ut tempor turpis.
+                  Mauris felis neque, egestas in lobortis et, sodales non ante.
+                  Ut vestibulum libero quis luctus tempus. Nullam eget dignissim
+                  massa. Vivamus id condimentum orci. Nunc ac sem urna. Aliquam
+                  et hendrerit nisl massa nunc.
+                </p>
+              </div>
+              <!-- end pp -->
+            </div>
+            <!-- end content -->
+            <hr class="invis" />
+
+            <div class="custombox clearfix">
+              <h4 class="small-title">3 Comments</h4>
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="comments-list">
+                    <div class="media">
+                      <a class="media-left" href="#">
+                        <img
+                          src="frontend/images/2.png"
+                          alt=""
+                          class="rounded-circle"
+                        />
+                      </a>
+                      <div class="media-body">
+                        <h4 class="media-heading user_name">
+                          Amanda Martines <small>5 days ago</small>
+                        </h4>
+                        <p>
+                          Exercitation photo booth stumptown tote bag Banksy,
+                          elit small batch freegan sed. Craft beer elit seitan
+                          exercitation, photo booth et 8-bit kale chips proident
+                          chillwave deep v laborum. Aliquip veniam delectus,
+                          Marfa eiusmod Pinterest in do umami readymade swag.
+                          Selfies iPhone Kickstarter, drinking vinegar jean.
+                        </p>
+                        <a href="#" class="btn btn-primary btn-sm">Reply</a>
+                      </div>
+                    </div>
+                    <div class="media">
+                      <a class="media-left" href="#">
+                        <img
+                          src="frontend/images/3.png"
+                          alt=""
+                          class="rounded-circle"
+                        />
+                      </a>
+                      <div class="media-body">
+                        <h4 class="media-heading user_name">
+                          Baltej Singh <small>5 days ago</small>
+                        </h4>
+
+                        <p>
+                          Drinking vinegar stumptown yr pop-up artisan sunt.
+                          Deep v cliche lomo biodiesel Neutra selfies. Shorts
+                          fixie consequat flexitarian four loko tempor duis
+                          single-origin coffee. Banksy, elit small.
+                        </p>
+
+                        <a href="#" class="btn btn-primary btn-sm">Reply</a>
+                      </div>
+                    </div>
+                    <div class="media last-child">
+                      <a class="media-left" href="#">
+                        <img
+                          src="frontend/images/4.png"
+                          alt=""
+                          class="rounded-circle"
+                        />
+                      </a>
+                      <div class="media-body">
+                        <h4 class="media-heading user_name">
+                          Marie Johnson <small>5 days ago</small>
+                        </h4>
+                        <p>
+                          Kickstarter seitan retro. Drinking vinegar stumptown
+                          yr pop-up artisan sunt. Deep v cliche lomo biodiesel
+                          Neutra selfies. Shorts fixie consequat flexitarian
+                          four loko tempor duis single-origin coffee. Banksy,
+                          elit small.
+                        </p>
+
+                        <a href="#" class="btn btn-primary btn-sm">Reply</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- end col -->
+              </div>
+              <!-- end row -->
+            </div>
+            <!-- end custom-box -->
+
+            <hr class="invis" />
+
+            <div class="custombox clearfix">
+              <h4 class="small-title">Leave a Reply</h4>
+              <div class="row">
+                <div class="col-lg-12">
+                  <form class="form-wrapper">
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Your name"
+                    />
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Email address"
+                    />
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Website"
+                    />
+                    <textarea
+                      class="form-control"
+                      placeholder="Your comment"
+                    ></textarea>
+                    <button type="submit" class="btn btn-primary">
+                      Submit Comment
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
